--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "lumite-studios/action",
-    "description": "An action class",
+    "description": "An action class.",
     "type": "library",
     "require": {
         "php": "^8.0",
