--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,33 @@
         "illuminate/support": "^8.40",
         "illuminate/validation": "^8.40"
     },
+    "require-dev": {
+        "orchestra/testbench": "^6.17",
+        "brianium/paratest": "^6.3",
+        "jchook/phpunit-assert-throws": "^1.0"
+    },
     "autoload": {
         "psr-4": {
             "LumiteStudios\\Action\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "LumiteStudios\\Action\\Tests\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": [
+            "@putenv XDEBUG_MODE=develop",
+            "paratest -p8"
+        ],
+        "test-filter": [
+            "@putenv XDEBUG_MODE=develop",
+            "phpunit --filter"
+        ],
+        "test-coverage": [
+            "@putenv XDEBUG_MODE=coverage",
+            "paratest -p8 --coverage-clover=coverage.xml"
+        ]
     }
 }
