--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "type": "library",
     "require": {
         "php": "^8.0",
-        "illuminate/auth": "^8.40",
-        "illuminate/support": "^8.40",
-        "illuminate/validation": "^8.40"
+        "illuminate/auth": "^8.0|^9.0",
+        "illuminate/support": "^8.0|^9.0",
+        "illuminate/validation": "^8.0|^9.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.17",
