--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,13 @@
     "type": "library",
     "require": {
         "php": "^8.0",
-        "illuminate/auth": "^8.0|^9.0",
-        "illuminate/support": "^8.0|^9.0",
-        "illuminate/validation": "^8.0|^9.0"
+        "illuminate/auth": "^8.0|^9.0|^10.0",
+        "illuminate/support": "^8.0|^9.0|^10.0",
+        "illuminate/validation": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.17",
-        "pestphp/pest": "^1.18",
+        "orchestra/testbench": "^7.0|^8.0",
+        "pestphp/pest": "^1.0",
         "nunomaduro/larastan": "^0.7.12"
     },
     "autoload": {
